--- a/views/partials/burger/burger-block.handlebars
+++ b/views/partials/burger/burger-block.handlebars
@@ -3,8 +3,7 @@
 
 	<button class="change-eaten" data-id="{{id}}" data-eatstate="{{eaten}}">
 
-		{{#if eaten}}MAKE ANOTHER
-		{{else}}DEVOUR ME!{{/if}}
+		{{#if eaten}}DEVOUR ME!{{else}}MAKE ANOTHER{{/if}}
 	</button>
 
 	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
