--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,20 +1,43 @@
-<h1>Burgers</h1>
+	<header>
+		
+	<h1>Burgers</h1>
+		
+	</header>
+	
+	<div class="imageholder">
 
-<h2>Burgers Ready to Eat</h2>
+	<h2>EAT A BURGER</h2>
 
-<ul>
-  {{#each burgers}}
-    <h1>{{name}}</h1>
-  {{/each}}
-</ul>
+	<ul>
+	  {{#each burgers}}
+	    {{#unless eaten}}
+	      {{> burger/burger-block eaten=true}}
+	    {{/unless}}
+	  {{/each}}
+	</ul>
 
 
-<h2>Add a Burger</h2>
+	<h2>BURGERS EATEN</h2>
+	
+	<ul>
+	  {{#each burgers}}
+	    {{#if eaten}}
+	      {{> burger/burger-block eaten=false}}
+	    {{/if}}
+	  {{/each}}
+	</ul>
 
-<form class="create-form">
-  <div class="form-group">
-    <label for="burgeradd">Burger Name:</label>
-    <input type="text" id="burgeradd" name="name">
-  </div>
-  <button type="submit">Add Burger</button>
-</form>
+
+
+	<h2>Add a Burger</h2>
+
+	<form class="create-form" action="/burgers/create" method="POST">
+	  <div class="form-group">
+	    <label for="burgeradd">Burger Name:</label>
+	    <input type="text" id="burgeradd" name="name">
+	  </div>
+	  <button type="submit">Add Burger</button>
+	</form>
+
+
+	</div>
