--- a/views/partials/burger/burger-block.handlebars
+++ b/views/partials/burger/burger-block.handlebars
@@ -1,10 +1,10 @@
-<li>
+<div class='itemlist'>
 	{{name}}
 
 	<button class="change-eaten" data-id="{{id}}" data-eatstate="{{eaten}}">
 
-		{{#if eaten}}DEVOUR ME!{{else}}MAKE ANOTHER{{/if}}
+		{{#if eaten}}EAT IT!{{else}}MAKE IT!{{/if}}
 	</button>
 
 	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
-</li>
+</div>
