--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 		<title>Burgertime</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/assets/js/burger.js"></script>
