--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,17 +1,16 @@
 <div class="wrapper imageholder">
   <header class="header">
-	<h1>Create New Burgers and Eat Your Favorites!</h1>
 
   </header>
   <section class="content">
     <div class="columns">
       <main class="main">
       <div class="whitebox">
-			<h2>BURGER CREATION</h2>
+			<h2>BUILD A BURGER</h2>
 			<div class="centerform">
 			<form class="create-form">
 			  <div class="form-group">
-			    <input type="text" id="burgeradd" name="name" placeholder="       Your Burger Name">
+			    <input type="text" id="burgeradd" name="name">
 			  </div>
 			  <button id="add" type="submit">BUILD A BURGER</button>
 			</form>
